src/objects/Fee_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <label>Asset Class</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breakpoint_From__c</fullName>
        <label>Breakpoint From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Breakpoint_To__c</fullName>
        <label>Breakpoint To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Schedule_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Fee Schedule ID</label>
        <length>180</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Fee Schedules</relationshipLabel>
        <relationshipName>Fee_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fee_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plan_ID__c</fullName>
        <label>Plan ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Schedule_Name__c</fullName>
        <label>Schedule Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Fee Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FS-{000}</displayFormat>
        <label>Schedule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>